[FIX] login-box: Sort out form layout in login box, especially popup mode and make remind and register links visible in fivealive themes
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/15.x@57615 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -1059,6 +1059,15 @@ li.login_link ul li a {
 .siteloginbar_popup img {
   height: 24px;
 }
+.navbar-form .siteloginbar_poppedup .form-control,
+.navbar-form .siteloginbar_poppedup .form-group.text-center {
+  width: 100%;
+}
+.box-login_box label {
+  display: block;
+  text-align: right;
+  padding-right: 0;
+}
 .tellafriend,
 .share {
   text-align: right;
