--- a/themes/base_files/less/tiki-modules.less
+++ b/themes/base_files/less/tiki-modules.less
@@ -184,6 +184,17 @@ li.login_link ul li a {
 	height: 24px;
 }
 
+.navbar-form .siteloginbar_poppedup .form-control,
+.navbar-form .siteloginbar_poppedup .form-group.text-center{
+	width: 100%;
+}
+
+.box-login_box label {
+	display: block;
+	text-align: right;
+	padding-right: 0;
+}
+
 // /* Center column */
 
 .tellafriend,
