--- a/themes/fivealive/less/tiki-selectors.less
+++ b/themes/fivealive/less/tiki-selectors.less
@@ -66,6 +66,11 @@
 	color: #fff;
 }
 
+.siteloginbar_poppedup li > a,
+.siteloginbar_poppedup label {
+	color: @navbar-default-link-color;
+}
+
 .box-quickadmin .cssmenu_horiz ul li {
 	background: #0e567a;
 }
